chore: update dependencies and remove requirements.txt
- Updated `pyjwt` version from 2.10.4 to 2.10.1 in `pyproject.toml`.
- Removed `ecdsa` dependency and noted the use of `cryptography` for security fixes.
- Updated `torch` version from 2.4.0 to 2.5.0 in `pyproject.toml`.
- Deleted `requirements.txt` as it is no longer needed.

fix: improve license header scripts

- Refactored `add_license_headers.py` and `check_license_compliance.py` for better readability and performance.
- Updated type hints to use `str | None` and `dict[str, list[str]]`.
- Enhanced error handling and logging in both scripts.

test: enhance test suite with constants and refactor tests

- Created `test_constants.py` for reusable test API keys and configuration values.
- Refactored multiple test files to utilize constants from `test_constants.py`.
- Updated license headers in test files for consistency.
- Improved test assertions and logging for better clarity.

style: general code cleanup and formatting

- Removed unnecessary imports and improved code formatting across various files.
- Ensured consistent use of f-strings for string formatting.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -190,26 +190,26 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install uv
-        run: pip install uv==${{ env.UV_VERSION }}
+      - name: Install Poetry
+        run: pip install poetry==${{ env.POETRY_VERSION }}
+
+      - name: Configure Poetry
+        run: |
+          poetry config virtualenvs.create true
+          poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: |
-          uv venv
-          source .venv/bin/activate
-          uv sync --dev
+        run: poetry install --with dev
 
       - name: Run safety check
         run: |
-          source .venv/bin/activate
-          safety check --json --output safety-report.json || true
-          safety check
+          poetry run safety check --json --output safety-report.json || true
+          poetry run safety check
 
       - name: Run pip-audit
         run: |
-          source .venv/bin/activate
-          pip-audit --format=json --output=pip-audit-report.json || true
-          pip-audit
+          poetry run pip-audit --format=json --output=pip-audit-report.json || true
+          poetry run pip-audit
 
       - name: Upload security reports
         uses: actions/upload-artifact@v4
@@ -233,19 +233,19 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install uv
-        run: pip install uv==${{ env.UV_VERSION }}
+      - name: Install Poetry
+        run: pip install poetry==${{ env.POETRY_VERSION }}
+
+      - name: Configure Poetry
+        run: |
+          poetry config virtualenvs.create true
+          poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: |
-          uv venv
-          source .venv/bin/activate
-          uv sync --dev
+        run: poetry install --with dev
 
       - name: Run performance tests
-        run: |
-          source .venv/bin/activate
-          pytest tests/performance/ -v --benchmark-json=benchmark.json
+        run: poetry run pytest tests/performance/ -v --benchmark-json=benchmark.json
 
       - name: Upload benchmark results
         uses: actions/upload-artifact@v4
