--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,14 +53,13 @@ tiktoken = "^0.5.2"
 tenacity = "^8.2.0"
 cachetools = "^5.3.0"
 psutil = "^5.9.0"
-pyjwt = { extras = ["cryptography"], version = "^2.10.4" }
+pyjwt = { extras = ["cryptography"], version = "^2.10.1" }
 # Enterprise features
 asyncpg = "^0.30.0"
 cryptography = "^44.0.2"
 passlib = { extras = ["bcrypt"], version = "^1.7.4" }
 email-validator = "^2.1.0"
-# Security fixes for vulnerabilities
-ecdsa = "^0.19.0"  # Fixes python-ecdsa timing attack vulnerability
+# Security fixes for vulnerabilities - using cryptography instead of ecdsa
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -78,12 +77,13 @@ bandit = "^1.7.5"
 safety = "^2.3.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
+pip-audit = "^2.6.0"
 
 [tool.poetry.group.ml]
 optional = true
 
 [tool.poetry.group.ml.dependencies]
-torch = "^2.4.0"
+torch = "^2.5.0"
 transformers = "^4.30.0"
 datasets = "^2.14.0"
 
