--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -13,6 +13,10 @@ on:
         required: false
         default: "develop"
 
+# Set minimal permissions at top level
+permissions:
+  contents: read
+
 env:
   KUBE_NAMESPACE: modelmuxer-staging
   DEPLOYMENT_NAME: modelmuxer-staging
